# src/models/user/UserRequest.ts
@@ -1,5 +1,0 @@
-export type UserRequest = {
-  id?: number;
-  name: string;
-  lastname: string;
-};
